FIX: update about section styles for better responsiveness and alignment

--- a/src/app/pages/home/about/about.module.scss
+++ b/src/app/pages/home/about/about.module.scss
@@ -14,8 +14,8 @@
       color         : var(--hc-primary-400);
     }
   }
-
 }
+
 .swiper {
   position          : relative;
   width             : 50%;
@@ -25,5 +25,26 @@
     max-height      : 80vh;
     border-radius   : 8px;
     box-shadow      : 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+}
+
+@media (max-width: 768px) {
+  .about .text {
+    align-items     : center;
+  }
+}
+
+@media (max-width: 650px) {
+  .about {
+    flex-direction  : column;
+    text-align      : center;
+
+    .text {
+      width         : 100%;
+    }
+
+    .swiper {
+      width         : 100%;
+    }
   }
 }
